2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* sauvola_fast.cc: Use subscaled integral image.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* sauvola_fast.cc: Fix bugs. Stable version.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* sauvola_fast.cc: New implementation.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/binarization/sauvola_threshold.hh: Add some debug.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Compute Sauvola on documents with light text and dark background.

	* scribo/binarization/internal/compute_local_threshold.hh,
	* scribo/binarization/internal/first_pass_functor.hh,
	* scribo/binarization/internal/sauvola_formula.hh,
	* scribo/binarization/local_threshold.hh: Update formula.

2012-05-10  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve option parser.

	* scribo/debug/option_check.hh: New function for verbose mode.

	* scribo/debug/option_parser.hh: Fix a bug with misplaced options.

2012-05-10  Guillaume Lazzara  <z@lrde.epita.fr>

	Add Readme files about contests.

	* src/contest/DAE-2011/README,
	* src/contest/hdibco-2010/README,
	* src/contest/hdlac-2011/README: New.

2012-05-10  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix compilation in Scribo.

	* scribo/primitive/link/merge_double_link_closest_aligned.hh: Add
	a missing include.

	* src/content_in_hdoc.cc,
	* src/contest/DAE-2011/content_in_doc_dae.cc,
	* src/contest/DAE-2011/content_in_hdoc_dae.cc,
	* src/contest/hdlac-2011/content_in_hdoc_hdlac.cc,
	* src/non_text_components.cc: Add mandatory arguments.

2012-05-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/debug/logger.hh: Improve log system.

2012-04-05  Guillaume Lazzara  <z@lrde.epita.fr>

	Remove useless targets in scribo/src/binarization.

	* scribo/src/binarization/Makefile.am: Remove targets.

	* src/binarization/pgm_sauvola.cc,
	* src/binarization/pgm_sauvola_ms.cc,
	* src/binarization/pgm_sauvola_threshold_image.cc,
	* src/binarization/ppm_sauvola.cc,